<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="app_name">正心校友會</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive">封存</string>
    <string name="archive_hint">確定封存至購物記錄嗎？</string>
    <string name="authenticate">驗證</string>
    <string name="available_quantity">可退貨數量</string>
    <string name="back">返回</string>
    <string name="barcode_hint">將此頁給門市人員刷過條碼，成功後即可回上頁</string>
    <string name="bind_accomplished">綁定完成</string>
    <string name="bind_accomplished_hint">系統已寄送一封驗證信件到您的</string>
    <string name="bind_accomplished_hint2">請點選信件中的認證網址進行認證即可!!</string>
    <string name="bind_already_accomplished_hint">您已使用</string>
    <string name="bind_already_accomplished_hint2">綁定成功，\n若需更換Email，請聯絡客服。</string>
    <string name="bind_email">綁定Email</string>
    <string name="birthday">生日</string>
    <string name="birthday_hint">YYYY-MM-DD</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buy_hint">選擇數量後請點擊\"立即購買\"</string>
    <string name="buy_now">立即購買</string>
    <string name="buy_quantity">購買數量：</string>
    <string name="can_cel">取消</string>
    <string name="cancel">取消</string>
    <string name="cancel_hint">確定取消此比訂單嗎？</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clean_notification">清除所有推播訊息</string>
    <string name="com.crashlytics.android.build_id">2c3a6e9b-7523-4220-9690-630ba8434418</string>
    <string name="confirm">確定</string>
    <string name="connect_service">聯繫客服</string>
    <string name="connection_fail">連線失敗請稍候重試</string>
    <string name="contact_service_content1">遇到問題？發生狀況？ \n我們客服就在LINE@線上，加好友傳訊過來吧！</string>
    <string name="contact_service_content2">雲端冰箱APP操作使用相關諮詢 \n例如：如何訂購？怎麼付款？我想退貨？手機畫面怪怪的？轉移帳戶去新手機？ \n客服專線 : 0984-291-558 \n服務時間 : 週一至週五 10:00 ～ 12:30 及 13:30 ～ 18:30 \n客服信箱 : askicebox@gmail.com \n \n萊爾富販售商品及服務相關諮詢 \n例如：咖啡好好喝！牛奶真新鮮！可以再便宜嗎？門市貨太少？發票搞丟了？ \n客服專線 : 0800-022-118 \n服務時間 : 週一至週五 08:30 ～ 12:15 及 13:30 ～ 17:30 \n客服信箱 : 0800022118@ms1.hilife.com.tw</string>
    <string name="country_code">國碼</string>
    <string name="default_web_client_id">212088318818-ioe54v71u3704segjrtmvj2itlkae44k.apps.googleusercontent.com</string>
    <string name="dolor">元</string>
    <string name="edit">編輯</string>
    <string name="email">Email</string>
    <string name="email_hint">請輸入您的Email</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="estimate_money">預估退款金額：</string>
    <string name="exchang_quantity">兌換數量：</string>
    <string name="exchange_expire">兌換期限：</string>
    <string name="exchange_hint">請確認品名、數量及金額正確，\n下一步點擊門市兌換\n(表示您已詳讀、同意本頁內容)</string>
    <string name="exchange_hint2">請選擇數量，下一步點擊\"門市兌換\"\n(表示您已詳讀、同意本頁內容)</string>
    <string name="exchanged">已兌換完畢</string>
    <string name="exchanged_short">已兌：</string>
    <string name="exchanging">兌換中</string>
    <string name="expired">已過期</string>
    <string name="fcm_notification">推播訊息通知</string>
    <string name="finish">完成</string>
    <string name="firebase_database_url">https://jhs-gameball.firebaseio.com</string>
    <string name="first_barcode">第一段條碼</string>
    <string name="gcm_defaultSenderId">212088318818</string>
    <string name="go_to_exchange">兌換去</string>
    <string name="go_to_pay">付款去</string>
    <string name="go_to_return">退貨去</string>
    <string name="google_api_key">AIzaSyAJDcMRN6ObySUiHXJedXmd_UCQ2j1O2xg</string>
    <string name="google_app_id">1:212088318818:android:43223c796bd2aa18</string>
    <string name="google_crash_reporting_api_key">AIzaSyAJDcMRN6ObySUiHXJedXmd_UCQ2j1O2xg</string>
    <string name="google_storage_bucket">jhs-gameball.appspot.com</string>
    <string name="graduation_class">高中畢業班級</string>
    <string name="graduation_year">高中畢業年份</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">購物記錄</string>
    <string name="i_want_to_cancel">我要取消</string>
    <string name="i_want_to_return">我要退貨</string>
    <string name="identity">驗證身份</string>
    <string name="identity_hint">請填身分證字號（可不填寫）</string>
    <string name="identity_hint_add">驗證身份只是為了讓系統確認您是否為正心畢業的校友，通過驗證的校友將可享受不一樣的優惠與折扣喔!!</string>
    <string name="junior_class">初中畢業班級</string>
    <string name="junior_year">初中畢業年份</string>
    <string name="know">我知道了</string>
    <string name="let_it_go">讓他去購物記錄吧！</string>
    <string name="login_hint">您目前狀態已是登入會員狀態，無需再一次登入會員。</string>
    <string name="logout">已登出</string>
    <string name="name">姓名</string>
    <string name="name_hint">請輸入您的姓名</string>
    <string name="next">下一步</string>
    <string name="no_service_store">不適用本服務之門市</string>
    <string name="no_sms">還沒收到簡訊？</string>
    <string name="notification_center">通知中心</string>
    <string name="order_id">訂單編號：</string>
    <string name="order_quantity">訂購數量：</string>
    <string name="order_status">訂單狀態：</string>
    <string name="original_price">原價：</string>
    <string name="password">會員密碼</string>
    <string name="password_chack">密碼確認</string>
    <string name="password_chack_hint">請再輸入一次密碼</string>
    <string name="password_hint">請輸入6-12個英文或數字</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pay_expire">付款期限：</string>
    <string name="pay_time">付款時間：</string>
    <string name="payed_money">付款金額：</string>
    <string name="paying">付款中</string>
    <string name="payment_hint">請確認品名、數量及金額正確\n下一步點擊\"門市付款\"\n(表示您已詳讀、同意本頁內容)</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email\n        completions.</string>
    <string name="phone">行動電話</string>
    <string name="phone_hint">請輸入行動電話號碼</string>
    <string name="product_description">商品說明</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="quantity">數量：</string>
    <string name="reach_max_quantity">已達每次最大可購買數量</string>
    <string name="read_all">標示為全部已讀</string>
    <string name="seconds_to_sent">秒後可再次發送</string>
    <string name="send_sms_code">發送驗證碼</string>
    <string name="sent">下一步</string>
    <string name="singin_hint">已經有校友會帳號</string>
    <string name="singin_phone">行動電話號碼就是您的校友會帳號!!</string>
    <string name="sms_code_hint">請輸入4位數字驗證碼</string>
    <string name="sms_code_hint2">輸入驗證碼後點擊\"V\"開始驗證</string>
    <string name="sms_code_title">系統已傳送4位數認證簡訊給您\n請輸入驗證碼</string>
    <string name="sms_tips">如果多次嘗試還是無法收到認證簡訊\n請聯繫客戶服務</string>
    <string name="加入校友會">加入校友會</string>
    <string name="更多服務">更多服務</string>
    <string name="最新消息">最新消息</string>
    <string name="活動相簿">活動相簿</string>
    <string name="獨享優惠">獨享優惠</string>
</resources>