<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="vertical" app:id="@+id/activity_regist" app:layout_width="match_parent" app:layout_height="match_parent"
    <LinearLayout app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="wrap_content">
        <ImageView app:id="@+id/imageView" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="10dp" app:src="@drawable/regist_header" app:srcCompat="@drawable/regist_header" />
    </LinearLayout>
    <ScrollView app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1" app:fillViewport="true" app:layout_weight="1.0">
        <LinearLayout app:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="vertical" app:layout_width="match_parent" app:layout_height="wrap_content"
            <LinearLayout app:orientation="vertical" app:layout_width="match_parent" app:layout_height="match_parent" app:layout_weight="1.0"
                <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3201">
                    <TextView app:textSize="18dp" app:id="@+id/titlephone" app:padding="5dp" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_marginLeft="5dp" app:layout_marginTop="10dp" app:layout_marginRight="30dp" app:layout_marginBottom="20dp" app:text="@string/phone" />
                    <EditText app:textAppearance="@style/TextAppearance.AppCompat" app:id="@+id/phone" app:background="@color/mm_tab_gray" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1e01" app:layout_marginTop="10dp" app:layout_marginRight="30dp" app:layout_marginBottom="20dp" app:hint="@string/phone_hint" app:maxLines="1" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" app:paddingStart="20dp" app:paddingEnd="20dp" />
                </LinearLayout>
                <TextView app:textColor="@color/mm_red_e60012" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginLeft="10dp" app:layout_marginTop="10dp" app:layout_marginRight="10dp" app:layout_marginBottom="10dp" app:text="@string/singin_phone" />
                <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3201">
                    <TextView app:textSize="18dp" app:id="@+id/title_password" app:padding="5dp" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_marginLeft="5dp" app:layout_marginRight="30dp" app:text="@string/password" />
                    <EditText app:textAppearance="@style/TextAppearance.AppCompat" app:id="@+id/password" app:background="@color/mm_tab_gray" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1e01" app:layout_marginRight="30dp" app:hint="@string/password_hint" app:maxLines="1" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" app:paddingStart="20dp" app:paddingEnd="20dp" />
                </LinearLayout>
                <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3201">
                    <TextView app:textSize="18dp" app:id="@+id/title_password_chack" app:padding="5dp" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_marginLeft="5dp" app:layout_marginRight="30dp" app:text="@string/password_chack" />
                    <EditText app:textAppearance="@style/TextAppearance.AppCompat" app:id="@+id/password_chack" app:background="@color/mm_tab_gray" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1e01" app:layout_marginRight="30dp" app:hint="@string/password_chack_hint" app:maxLines="1" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" app:paddingStart="20dp" app:paddingEnd="20dp" />
                </LinearLayout>
                <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3201">
                    <TextView app:textSize="18dp" app:id="@+id/title_name" app:padding="10dp" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_marginLeft="5dp" app:layout_marginRight="55dp" app:text="@string/name" app:textAllCaps="false" app:textAlignment="viewStart" />
                    <EditText app:textAppearance="@style/TextAppearance.AppCompat" app:id="@+id/name" app:background="@color/mm_tab_gray" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1e01" app:layout_marginRight="30dp" app:hint="@string/name_hint" app:maxLines="1" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" app:paddingStart="20dp" app:paddingEnd="20dp" />
                </LinearLayout>
                <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3201">
                    <TextView app:textSize="18dp" app:id="@+id/title_birthday" app:padding="10dp" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_marginLeft="5dp" app:layout_marginRight="55dp" app:text="@string/birthday" app:textAllCaps="false" app:textAlignment="viewStart" />
                    <EditText app:textAppearance="@style/TextAppearance.AppCompat" app:id="@+id/birthday" app:background="@color/mm_tab_gray" app:focusable="true" app:focusableInTouchMode="true" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1e01" app:layout_marginRight="30dp" app:hint="@string/birthday_hint" app:maxLines="1" app:inputType="UNKNOWN_DATA_0x0" app:paddingStart="20dp" app:paddingEnd="20dp" />
                </LinearLayout>
                <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="wrap_content" app:weightSum="1.0">
                    <TextView app:textSize="18dp" app:padding="10dp" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_marginLeft="5dp" app:layout_marginRight="55dp" app:text="@string/graduation_year" app:textAllCaps="false" app:textAlignment="viewStart" />
                    <android.support.v7.widget.AppCompatSpinner app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/Spinner1" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x1e01" app:layout_marginRight="30dp" app:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="wrap_content" app:weightSum="1.0">
                    <TextView app:textSize="18dp" app:padding="10dp" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_marginLeft="5dp" app:layout_marginRight="55dp" app:text="@string/graduation_class" app:textAllCaps="false" app:textAlignment="viewStart" />
                    <android.support.v7.widget.AppCompatSpinner app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/Spinner2" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x1e01" app:layout_marginRight="30dp" app:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="wrap_content" app:weightSum="1.0">
                    <TextView app:textSize="18dp" app:padding="10dp" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_marginLeft="5dp" app:layout_marginRight="55dp" app:text="@string/junior_year" app:textAllCaps="false" app:textAlignment="viewStart" />
                    <android.support.v7.widget.AppCompatSpinner app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/Spinner3" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x1e01" app:layout_marginRight="30dp" app:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="wrap_content" app:weightSum="1.0">
                    <TextView app:textSize="18dp" app:padding="10dp" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_marginLeft="5dp" app:layout_marginRight="55dp" app:text="@string/junior_class" app:textAllCaps="false" app:textAlignment="viewStart" />
                    <android.support.v7.widget.AppCompatSpinner app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/Spinner4" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="UNKNOWN_DATA_0x1e01" app:layout_marginRight="30dp" app:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout app:orientation="horizontal" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3201">
                    <TextView app:textSize="18dp" app:padding="5dp" app:layout_width="wrap_content" app:layout_height="UNKNOWN_DATA_0x3201" app:layout_marginLeft="5dp" app:layout_marginRight="30dp" app:text="@string/identity" />
                    <EditText app:textAppearance="@style/TextAppearance.AppCompat" app:id="@+id/identity" app:background="@color/mm_tab_gray" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x1e01" app:layout_marginRight="30dp" app:hint="@string/identity_hint" app:maxLines="1" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberPassword|phone|date|time" app:paddingStart="20dp" app:paddingEnd="20dp" />
                </LinearLayout>
                <TextView app:textColor="@color/mm_red_e60012" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginLeft="10dp" app:layout_marginTop="10dp" app:layout_marginRight="10dp" app:layout_marginBottom="10dp" app:text="@string/identity_hint_add" />
            </LinearLayout>
            <TextView app:textSize="20dp" app:textColor="@color/colorPrimary" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/login" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginLeft="10dp" app:layout_marginTop="10dp" app:layout_marginRight="10dp" app:layout_marginBottom="10dp" app:text="@string/singin_hint" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="horizontal" app:id="@+id/linear1" app:background="@color/mm_org_e95513" app:clickable="true" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3c01" app:onClick="next">
        <TextView app:textSize="24dp" app:textColor="0x106000b" app:padding="5dp" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/sent" />
    </LinearLayout>
</LinearLayout>
