<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:fillViewport="true" android:layout_weight="1.0">
        <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16dp" android:textColor="@color/mm_red_e60012" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x4601" android:text="@string/sms_code_title" />
            <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.0">
                <View android:background="@color/mm_black_3d3d3d" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x101" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" />
                <EditText android:textColor="0x106000c" android:textColorHint="0x106000c" android:id="@+id/edittext_code" android:background="@color/mm_gray_cccccc" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1e01" android:layout_marginLeft="30dp" android:layout_marginTop="30dp" android:layout_marginRight="30dp" android:layout_marginBottom="30dp" android:hint="@string/sms_code_hint" android:maxLength="4" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" android:paddingStart="20dp" android:paddingEnd="20dp" />
                <View android:background="@color/mm_black_3d3d3d" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x101" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" />
                <TextView android:textSize="14dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:text="@string/no_sms" />
                <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                    <TextView android:textSize="16dp" android:textColor="0x106000b" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/textview_send_remain" android:background="@color/mm_gray_cccccc" android:layout_width="UNKNOWN_DATA_0xa001" android:layout_height="UNKNOWN_DATA_0x3c01" android:text="@string/seconds_to_sent" />
                    <TextView android:textSize="21dp" android:textColor="0x106000b" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/textview_send_sms" android:background="@color/mm_black_3d3d3d" android:visibility="visible" android:layout_width="UNKNOWN_DATA_0xa001" android:layout_height="UNKNOWN_DATA_0x3c01" android:text="@string/send_sms_code" android:onClick="reSendSms" />
                </RelativeLayout>
                <TextView android:textSize="14dp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/sms_tips" />
                <TextView android:textSize="21dp" android:textColor="0x106000b" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/mm_black_3d3d3d" android:layout_width="UNKNOWN_DATA_0xa001" android:layout_height="UNKNOWN_DATA_0x3c01" android:text="@string/connect_service" android:onClick="contactService" />
                <View android:background="@color/mm_black_3d3d3d" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x101" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp" />
            </LinearLayout>
            <TextView android:textSize="14dp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/sms_code_hint2" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3c01"
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:background="@color/mm_black_3d3d3d" android:clickable="true" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3c01" android:layout_weight="1.0" android:onClick="back">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_back" />
            <TextView android:textSize="24dp" android:textColor="0x106000b" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" />
        </LinearLayout>
        <LinearLayout android:textSize="30dp" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:background="@color/mm_red_e60012" android:clickable="true" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3c01" android:scaleType="center" android:text="@string/next" android:layout_weight="1.0" android:onClick="next">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_ok" />
            <TextView android:textSize="24dp" android:textColor="0x106000b" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/authenticate" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
